# financial_planning

./: .gitignore  Cargo.toml  LICENSE
financial_planning_cli/: Cargo.toml
financial_planning_cli/src/: input.rs  main.rs  output.rs
financial_planning_lib/: Cargo.toml
financial_planning_lib/src/: asset.rs  events.rs  flow.rs  input.rs  lib.rs  lookup_table.rs  model.rs  tax.rs  time.rs
financial_planning_web/: Cargo.toml
financial_planning_web/example/: users.toml
financial_planning_web/example/static/: README.txt  model.html
financial_planning_web/src/: auth.rs  lib.rs  run_model.rs
inputs/example/: assets.toml  flows.toml  plan.toml  tables.toml  times.toml
