[package]
name = "financial_planning_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
thousands = "0.2.0"
strum_macros = { version = "0.23.1" }
strum = "0.20.0"
anyhow = "1.0.45"
itertools = "0.10.1"
serde = { version = "1.0.130", features = ["derive"]}
toml = "0.5.8"

[dev-dependencies]
maplit = "1.0.2"
